--- a/login.html
+++ b/login.html
@@ -541,8 +541,8 @@
     };
 
     var BADGE_IMG = {
-      'MetaMask': 'assets/MetaMaskLogo.svg',
-      'Coinbase Wallet': 'assets/CoinbaseLogo.svg'
+      'MetaMask': 'MetaMaskLogo.svg',
+      'Coinbase Wallet': 'CoinbaseLogo.svg'
     };
 
     function showToast(msg){
