--- a/login.html
+++ b/login.html
@@ -440,14 +440,14 @@
           <button class="wallet-btn" type="button" data-wallet="MetaMask" role="listitem" aria-label="Connect with MetaMask">
             <span class="wallet-name">MetaMask</span>
             <span class="wallet-icon" aria-hidden="true">
-              <img src="./MetaMaskLogo.svg" alt="" />
+              <img src="/MetaMaskLogo.svg" alt="" />
             </span>
           </button>
 
           <button class="wallet-btn" type="button" data-wallet="Coinbase Wallet" role="listitem" aria-label="Connect with Coinbase Wallet">
             <span class="wallet-name">Coinbase Wallet</span>
             <span class="wallet-icon" aria-hidden="true">
-              <img src="./CoinbaseLogo.svg" alt="" />
+              <img src="/CoinbaseLogo.svg" alt="" />
             </span>
           </button>
         </div>
@@ -541,8 +541,8 @@
     };
 
     var BADGE_IMG = {
-      'MetaMask': 'MetaMaskLogo.svg',
-      'Coinbase Wallet': 'CoinbaseLogo.svg'
+      'MetaMask': '/MetaMaskLogo.svg',
+      'Coinbase Wallet': '/CoinbaseLogo.svg'
     };
 
     function showToast(msg){
